--- a/finser/api/service.yaml
+++ b/finser/api/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: docs
+  name: finser
 spec:
   selector:
-    app: docs
+    app: finser
   ports:
-    - port: 3000
+    - port: 8080
   type: NodePort
