--- a/finser/api/yahoo-finance-parser.yaml
+++ b/finser/api/yahoo-finance-parser.yaml
@@ -11,6 +11,16 @@ spec:
           containers:
             - name: hello
               image: erfangc/yahoo-finance-parser:latest
-              # TODO add the clientId and clientSecret
               # TODO make sure the SDK is pointing to the correct end point
+              env:
+                - name: CLIENT_ID
+                  valueFrom:
+                    secretKeyRef:
+                      name: yahoo-finance-parser-secret
+                      key: clientId
+                - name: CLIENT_SECRET
+                  valueFrom:
+                    secretKeyRef:
+                      name: yahoo-finance-parser-secret
+                      key: clientSecret
           restartPolicy: OnFailure
