adding stateful set storage class gp2 to statefulsets

--- a/authz/api/mongodb-stateful-set.yaml
+++ b/authz/api/mongodb-stateful-set.yaml
@@ -52,9 +52,12 @@ spec:
   - metadata:
       name: mongo-authz-persistent-storage
       annotations:
-        volume.beta.kubernetes.io/storage-class: "standard"
+        volume.beta.kubernetes.io/storage-class: "gp2"
     spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
           storage: 5Gi
+  selector:
+    matchLabels:
+      role: mongo-authz
