--- a/finser/api/cassandra-statefulset.yaml
+++ b/finser/api/cassandra-statefulset.yaml
@@ -85,7 +85,7 @@ spec:
       name: cassandra-data
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: default
+      storageClassName: "gp2"
       resources:
         requests:
           storage: 2Gi
