--- a/authz/api/mongodb-stateful-set.yaml
+++ b/authz/api/mongodb-stateful-set.yaml
@@ -1,21 +1,53 @@
 apiVersion: v1
 kind: Service
 metadata:
- name: mongo-authz
- labels:
-   name: mongo-authz
+  name: mongo-authz
+  labels:
+    name: mongo-authz
 spec:
- ports:
- - port: 27017
-   targetPort: 27017
- clusterIP: None
- selector:
-   role: mongo-authz
+  ports:
+    - port: 27017
+      targetPort: 27017
+  clusterIP: None
+  selector:
+    role: mongo-authz
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: mongodb
+  namespace: default
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: pod-reader
+rules:
+  - apiGroups: [""]
+    resources:
+      - pods
+    verbs:
+      - get
+      - list
+      - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: pod-reader-rolebinding
+subjects:
+  - kind: ServiceAccount
+    name: mongodb
+    namespace: default
+roleRef:
+  apiGroup: ""
+  kind: ClusterRole
+  name: pod-reader
 ---
 apiVersion: apps/v1beta2
 kind: StatefulSet
 metadata:
-   name: mongo-authz
+  name: mongo-authz
 spec:
   serviceName: mongo-authz
   replicas: 1
@@ -25,17 +57,18 @@ spec:
         role: mongo-authz
     spec:
       terminationGracePeriodSeconds: 10
+      serviceAccountName: mongodb
       containers:
         - name: mongo
           image: mongo
           command:
-              - mongod
-              - "--replSet"
-              - rs0
-              - "--bind_ip"
-              - 0.0.0.0
-              - "--smallfiles"
-              - "--noprealloc"
+            - mongod
+            - "--replSet"
+            - rs0
+            - "--bind_ip"
+            - 0.0.0.0
+            - "--smallfiles"
+            - "--noprealloc"
           ports:
             - containerPort: 27017
           volumeMounts:
@@ -49,15 +82,15 @@ spec:
             - name: KUBERNETES_MONGO_SERVICE_NAME
               value: mongo-authz
   volumeClaimTemplates:
-  - metadata:
-      name: mongo-authz-persistent-storage
-      annotations:
-        volume.beta.kubernetes.io/storage-class: "gp2"
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      resources:
-        requests:
-          storage: 5Gi
+    - metadata:
+        name: mongo-authz-persistent-storage
+        annotations:
+          volume.beta.kubernetes.io/storage-class: "gp2"
+      spec:
+        accessModes: [ "ReadWriteOnce" ]
+        resources:
+          requests:
+            storage: 5Gi
   selector:
     matchLabels:
       role: mongo-authz
