imagePullPolicy set to always

--- a/authz/api/deployment.yaml
+++ b/authz/api/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - image: erfangc/authz:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         name: authz
         env:
         - name: URL
