--- a/nginx-ingress/api/mandatory.yaml
+++ b/nginx-ingress/api/mandatory.yaml
@@ -217,7 +217,7 @@ spec:
             - --configmap=\$(POD_NAMESPACE)/nginx-configuration
             - --tcp-services-configmap=\$(POD_NAMESPACE)/tcp-services
             - --udp-services-configmap=\$(POD_NAMESPACE)/udp-services
-            - --publish-service=\$(POD_NAMESPACE)/ingress-nginx
+            - --publish-service=\$(POD_NAMESPACE)/default-backend
             - --annotations-prefix=nginx.ingress.kubernetes.io
             - --default-ssl-certificate=default/nginx-tls
           securityContext:
