--- a/authz/api/mongodb-stateful-set.yaml
+++ b/authz/api/mongodb-stateful-set.yaml
@@ -40,7 +40,7 @@ subjects:
     name: mongodb
     namespace: default
 roleRef:
-  apiGroup: ""
+  apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: pod-reader
 ---
