adding redis host envvar to iam

--- a/iam/api/deployment.yaml
+++ b/iam/api/deployment.yaml
@@ -37,8 +37,8 @@ spec:
                 configMapKeyRef:
                   name: site
                   key: url
-            - name: iam-redis
-              value: localhost
+            - name: REDIS_HOST
+              value: iam-redis
             - name: ISSUER
               value: https://raincove.auth0.com/
             - name: CALLBACK
