--- a/iam/api/deployment.yaml
+++ b/iam/api/deployment.yaml
@@ -38,7 +38,7 @@ spec:
                   name: site
                   key: url
             - name: REDIS_HOST
-              value: iam-redis
+              value: iam-redis-0
             - name: ISSUER
               value: https://raincove.auth0.com/
             - name: CALLBACK
