--- a/iam/api/redis-sts.yaml
+++ b/iam/api/redis-sts.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis
+  name: iam-redis
 spec:
   ports:
     - port: 6379
-      name: redis
+      name: iam-redis
   clusterIP: None
   selector:
     app: iam-redis
@@ -31,7 +31,7 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 6379
-              name: redis
+              name: iam-redis
           volumeMounts:
             - name: redis-volume
               mountPath: /data
