--- a/finser/api/ingress.yaml
+++ b/finser/api/ingress.yaml
@@ -4,9 +4,8 @@ metadata:
   name: finser
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/auth-url: "https://$host/authz/authz"
-    nginx.ingress.kubernetes.io/auth-signin: "https://$host/authz/login?originalRequestUri=$escaped_request_uri"
-    nginx.ingress.kubernetes.io/auth-response-headers: x-auth-request-email, x-auth-request-user
+    nginx.ingress.kubernetes.io/auth-url: "https://$host/iam/api/v1/_authorize"
+    nginx.ingress.kubernetes.io/auth-signin: "https://$host/iam/api/v1/login?originalRequestUri=$escaped_request_uri"
 spec:
   rules:
     - http:
