--- a/finser/api/yahoo-finance-parser.yaml
+++ b/finser/api/yahoo-finance-parser.yaml
@@ -11,8 +11,7 @@ spec:
           containers:
             - name: hello
               image: erfangc/yahoo-finance-parser:latest
-              command:
-                - yahoo-finance-parser
+              args:
                 - run-universe
                 - NYSE
               env:
@@ -41,8 +40,7 @@ spec:
           containers:
             - name: hello
               image: erfangc/yahoo-finance-parser:latest
-              command:
-                - yahoo-finance-parser
+              args:
                 - run-universe
                 - NASDAQ
               env:
