--- a/grafana/dev/ingress.yaml
+++ b/grafana/dev/ingress.yaml
@@ -6,13 +6,13 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/auth-url: "https://$host/iam/api/v1/_authorize"
     nginx.ingress.kubernetes.io/auth-signin: "https://$host/iam/api/v1/login?originalRequestUri=$escaped_request_uri"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
   namespace: monitoring
 spec:
   rules:
-    - http:
+    - host: grafana.raincove.io
+      http:
         paths:
-        - path: /grafana(/|$)(.*)
+        - path: /
           backend:
             serviceName: grafana 
             servicePort: 3000
